# Emilia

./: Cargo.toml  README.md
.github/workflows/: CF-Proxy-Scan.yml  Go-scan-Proxy.yml  RustCFScan.yml
AutoScan/: rawProxyList (4).txt
Data/: IPProxy19-6.txt  ProxyIP19-6.txt  ProxyIP2Agustus.txt  ProxyIsp.txt  RawProxyISP.txt  alive.txt  emeliaProxyIP.txt  emeliaProxyIP15AGS.txt  hasil40kPxyIP.txt
SC-Emilia/: main.go  main.py
cekproxyip/: README.md  go.mod  main.go
src/: main.rs
src/src/: main.rs
