[package]
name = "cekproxy"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45", features = ["full"] }
futures = "0.3"
native-tls = "0.2" # Peer dependency untuk tokio-native-tls
tokio-native-tls = "0.3"
serde_json = "1.0"
# fs dan io adalah bagian dari std, tidak perlu dependensi eksternal eksplisit
